chore: change java version to !&